<resources>
    <string name="app_name">SimpleLogin</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="login_text">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="attempts_text">Attempts</string>
    <string name="button_login_text">Login</string>
    <string name="welcome_text">Welcome to Simple Login</string>
</resources>
