<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.meruvian.simplelogin.simplelogin.UserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_text"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username_text"
        android:id="@+id/textView_username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_username"
        android:layout_alignTop="@+id/textView_username"
        android:layout_toEndOf="@+id/textView_username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password_text"
        android:id="@+id/textView_password"
        android:layout_below="@+id/editText_username"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:layout_below="@+id/editText_username"
        android:layout_toEndOf="@+id/textView_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/attempts_text"
        android:id="@+id/textView_attempts"
        android:layout_below="@+id/editText_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login_text"
        android:id="@+id/button_login"
        android:layout_below="@+id/textView_attempts"
        android:layout_alignParentStart="true"
        android:layout_marginTop="72dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/attempts_count"
        android:layout_alignTop="@+id/textView_attempts"
        android:layout_toEndOf="@+id/textView_attempts" />

</RelativeLayout>
